# zetta

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  zetta.py
zetta/: zetta.py
